test/error/syn/arithMissingExpr.tig
let
    var n := 0     
    var f := 1     
    var i := 2     


in  
    n:=f**n /*falta uma expressao ou sobrou um operador*/
end
